# ekiga-tensor

./: .gitignore  Makefile.am  configure.ac  ekiga.appdata.xml.in  org.gnome.ekiga-debug.desktop.in.in  org.gnome.ekiga.desktop.in.in  org.gnome.ekiga.gschema.xml.in.in
lib/: Makefile.am
lib/engine/: engine.cpp  engine.h
lib/engine/account/: account-core.cpp  account-core.h  account.h  bank-impl.h  bank.h
lib/engine/action/: action-provider.cpp  action-provider.h  action.cpp  action.h  actor.cpp  actor.h
lib/engine/addressbook/: book-impl.h  book.h  contact-core.cpp  contact-core.h  contact.h  source-impl.h  source.h
lib/engine/audioinput/: audioinput-core.cpp  audioinput-core.h  audioinput-info.h  audioinput-manager.h
lib/engine/audiooutput/: audiooutput-core.cpp  audiooutput-core.h  audiooutput-info.h  audiooutput-manager.h  audiooutput-scheduler.cpp  audiooutput-scheduler.h
lib/engine/components/call-history/: history-book.cpp  history-book.h  history-contact.cpp  history-contact.h  history-main.cpp  history-main.h  history-source.cpp  history-source.h
lib/engine/components/foe-list/: foe-list.cpp  foe-list.h
lib/engine/components/glib-notify/: glib-notify-main.cpp  glib-notify-main.h
lib/engine/components/gmconf-personal-details/: gmconf-personal-details.cpp  gmconf-personal-details.h
lib/engine/components/hal-gudev/: hal-gudev-main.cpp  hal-gudev-main.h  hal-gudev-monitor.cpp  hal-gudev-monitor.h
lib/engine/components/null-audioinput/: audioinput-main-null.cpp  audioinput-main-null.h  audioinput-manager-null.cpp  audioinput-manager-null.h
lib/engine/components/null-audiooutput/: audiooutput-main-null.cpp  audiooutput-main-null.h  audiooutput-manager-null.cpp  audiooutput-manager-null.h
lib/engine/components/opal/: opal-account.cpp  opal-account.h  opal-audio.cpp  opal-audio.h  opal-bank.cpp  opal-bank.h  opal-call-manager.cpp  opal-call-manager.h  opal-call.cpp  opal-call.h  opal-codec-description.cpp  opal-codec-description.h  opal-main.cpp  opal-main.h  opal-plugins-hook.cpp  opal-plugins-hook.h  opal-presentity.cpp  opal-presentity.h  sip-call-manager.cpp  sip-call-manager.h
lib/engine/components/opal/process/: opal-endpoint.cpp  opal-endpoint.h  opal-process.cpp  opal-process.h  pcss-endpoint.cpp  pcss-endpoint.h  sip-endpoint.cpp  sip-endpoint.h
lib/engine/components/ptlib/: audioinput-main-ptlib.cpp  audioinput-main-ptlib.h  audioinput-manager-ptlib.cpp  audioinput-manager-ptlib.h  audiooutput-main-ptlib.cpp  audiooutput-main-ptlib.h  audiooutput-manager-ptlib.cpp  audiooutput-manager-ptlib.h  utils.cpp  utils.h
lib/engine/framework/: boost-exceptions.cpp  chain-of-responsibility.h  device-def.h  dynamic-object-store.h  dynamic-object.h  filterable.h  form-builder.cpp  form-builder.h  form-dumper.cpp  form-dumper.h  form-request-simple.cpp  form-request-simple.h  form-request.h  form-visitor.h  form.cpp  form.h  kickstart.cpp  kickstart.h  map-key-const-iterator.h  map-key-iterator.h  null-deleter.h  personal-details.h  ptr_array.h  ptr_array_const_iterator.h  ptr_array_iterator.h  robust-xml.cpp  robust-xml.h  runtime-glib.cpp  runtime.h  scoped-connections.h  services.cpp  services.h
lib/engine/friend-or-foe/: friend-or-foe.cpp  friend-or-foe.h
lib/engine/gui/gtk-core/: codecsbox.cpp  codecsbox.h  form-dialog-gtk.cpp  form-dialog-gtk.h  gactor-menu.cpp  gactor-menu.h  gtk-core-main.cpp  gtk-core-main.h  gtk-core.cpp  gtk-core.h
lib/engine/gui/gtk-frontend/: addressbook-window.cpp  addressbook-window.h  assistant-window.cpp  assistant-window.h  book-view-gtk.cpp  book-view-gtk.h  call-history-view-gtk.cpp  call-history-view-gtk.h  call-window.cpp  call-window.h  chat-area.cpp  chat-area.h  chat-window.cpp  chat-window.h  conversation-page.cpp  conversation-page.h  ekiga-app.cpp  ekiga-app.h  ekiga-window.cpp  ekiga-window.h  ext-window.cpp  ext-window.h  preferences-window.cpp  preferences-window.h  roster-view-gtk.cpp  roster-view-gtk.h  statusicon.cpp  statusicon.h  statusmenu.cpp  statusmenu.h  uri.cpp  uri.h
lib/engine/hal/: hal-core.cpp  hal-core.h  hal-manager.h
lib/engine/notification/: notification-core.h  notification-dummy.cpp
lib/engine/plugin/: plugin-core.cpp  plugin-core.h
lib/engine/presence/: cluster-impl.h  cluster.h  heap-impl.h  heap.h  presence-core.cpp  presence-core.h  presentity.h
lib/engine/protocol/: call-core.cpp  call-core.h  call-manager.h  call.h  codec-description.cpp  codec-description.h  known-codecs.h  rtcp-statistics.h
lib/gui/: dialpad.c  dialpad.h  gm-cell-renderer-bitext.c  gm-cell-renderer-bitext.h  gm-cell-renderer-expander.c  gm-cell-renderer-expander.h  gm-entry.c  gm-entry.h  gm-info-bar.c  gm-info-bar.h  gm-smiley-chooser-button.c  gm-smiley-chooser-button.h  gm-smileys.c  gm-smileys.h  gm-text-anchored-tag.c  gm-text-anchored-tag.h  gm-text-buffer-enhancer-helper-interface.c  gm-text-buffer-enhancer-helper-interface.h  gm-text-buffer-enhancer.c  gm-text-buffer-enhancer.h  gm-text-extlink.c  gm-text-extlink.h  gm-text-smiley.c  gm-text-smiley.h  gmdialog.c  gmdialog.h  gmlevelmeter.c  gmlevelmeter.h  gmwindow.c  gmwindow.h
lib/platform/: platform.c  platform.h  winpaths.h
lib/settings/: ekiga-settings.h  settings-mappings.c  settings-mappings.h
pixmaps/: Makefile.am
plugins/: Makefile.am
plugins/evolution/: evolution-book.cpp
po/: POTFILES.in  ru.po
src/: Makefile.am  ekiga-debug.in  main.cpp  settings.xsl
src/dbus-helper/: dbus-helper.cpp  dbus.cpp  dbus.h
src/sysconfig/: ekiga
tftp/: Makefile.am  dhclient.conf  tftp.sh
